--- a/index.html
+++ b/index.html
@@ -7,75 +7,64 @@
   <title>Instagram Clone</title>
   <link rel="stylesheet"
     href="C:\Users\51033877\Desktop\front basico\Ironhack\lab-css-instagram-clone\styles\style.css">
-  <!-- don't forget to link your styles -->
+  
 </head>
 
 <body>
-  <container>
-    <div class="blue">
+
+  <div class="blue">
 
 
-      <div class="phones"><img src="./images/phones.png" /></div>
+    <div class="phones"><img src="./images/phones.png" /></div>
 
-      <div class="logo"><img src="./images/brand.png" /></div>
+    <div class="logo"><img src="./images/brand.png" /></div>
 
 
-      <div class="login"><img src="./images/home.png" /> Log in</div>
+    <div class="login"><img src="./images/home.png" /> Log in</div>
 
+  </div>
+
+  <div class="white">
+
+    <div class="text">
+      <h2>Capture and Share<br> the Worlds Moments</h2>
+      <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+
+      <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram - it's that
+        easy.
+        You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+
+      <p>Oh yeah, did we mention it's free?</p>
+
+      <div>
+        <br>
+        <img src="./images/badge-iphone.png" />
+        <img src="./images/badge-android.png" />
+      </div>
     </div>
 
-    <div class="white">
+  </div>
 
-      <div class="text">
-        <h3>Capture and Share</h3>
-        <h3> the Worlds Moments</h3>
-        <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
-
-        <p>Take a pircture or video, choose a filter to transform its look and feel, then post to Instagram - it's that
-          easy.
-          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
-
-        <p>Oh yeah, did we mention it's free?</p>
-
-        <div>
-          <br>
-          <img src="./images/badge-iphone.png" />
-          <img src="./images/badge-android.png" />
-        </div>
-      </div>
-
-
-
-
-
+  <footer class="footer">
+    <div class="container">
+      <ul>
+        <li><b>ABOUT US</b></li>
+        <li><b>SUPPORT</b></li>
+        <li><b>BLOG</b></li>
+        <li><b>PRESS</b></li>
+        <li><b>API</b></li>
+        <li><b>JOBS</b></li>
+        <li><b>PRIVACY</b></li>
+        <li><b>TERMS</b></li>
+        <li><b>&copy;INSTAGRAM</b></li>
+      </ul>
     </div>
+  </footer>
 
 
 
 
 
-    <!-- FOOTER -->
-    <footer class="footer">
-      <div class="container">
-        <ul>
-          <li>ABOUT US</li>
-          <li>SUPPORT</li>
-          <li>BLOG</li>
-          <li>PRESS</li>
-          <li>API</li>
-          <li>JOBS</li>
-          <li>PRIVACY</li>
-          <li>TERMS</li>
-        </ul>
-
-      </div>
-    </footer>
-
-
-
-    <container>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 
