--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Instagram Clone</title>
+<!-- don't forget to link your styles -->
+<link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+  <!-div para o background azul->
+    <div id="background-blue"></div>
+    <section id="container">
+  <!-coluna 1->
+      <div id="iphone">
+        <img src="./images/phones.png">
+      </div>
+  <!-coluna 2->
+      <div id="content">
+        <div id="head">
+          <img src="./images/brand.png">
+          <a href="#" id="button">
+            <img src="./images/home.png">
+            <span>Log in</span>
+          </a>
+        </div>
+        <div id="text">
+          <h1>Capture and Share <br> the World's Moments</h1>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life 
+          with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look 
+            and feel, then post to Instagram &mdash; it's that easy. You can 
+            even share to Facebook, Twitter, Tumblr and more. It's a 
+          new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <a href="#" class="download-button"><img src="./images/badge-iphone.png"></a>
+            <a href="#" class="download-button"><img src="./images/badge-android.png"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+  <!-coluna 3(finalzinho)->
+    <footer>
+      <section>
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+        </ul>
+      </section>
+        <p>&copy; 2014 Instagram</p>
+    </footer>
+</body>
 </html>
