--- a/index.html
+++ b/index.html
@@ -2,15 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- reponsive meta tag -->
+    <title>Instagram Clone Christopher</title>
+    <link rel="stylesheet" type="text/css" href="./styles/style.css" media="screen" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="section1"> <!-- Instagram, background, bottom-->
+      <img src="images/phones.png" alt="telephones"class=telefone>
+      <img src="images/brand.png" alt="instagram logo camera" id="instagram">
+      <p><img src="images/home.png" alt= logo casa id="logIn">Log in</p><!-- devia fazer um button-->
+    </section>
+  <div class="text">
+        <h2>Instagram Capture and Share the World's Moments</h2> 
+        <p>Instagram is a fast, beautiful and fun way to share your life with
+        friends and family.<br> <br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+        Jobs Privacy Terms &copy; 2014 Instagram</p>
+        <img src="images/badge-iphone.png" alt="logo iphone">
+        <img src="images/badge-android.png" alt="logo android">
+   </div>
+    <footer>
+      <ul>
+        <li>ABOUT US</li>
+        <li>SUPPORT</li>
+        <li>BLOG</li>
+        <li>PRESS</li>
+        <li>API</li>
+        <li>JOBS</li>
+        <li>PRIVACY</li>
+        <li>TERMS</li>
+        <li>2014 INSTAGRAM</li>
+      </ul>
+    </footer>
+    </div>
   </body>
 </html>
