--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+
+</head>
+
+<body>
+  <header id="cabeçalho">
+    <div>
+      <img src="./images/brand.png" alt="logo">
+    </div>
+    <nav class="login">
+      <img src="images/home.png" alt="home">
+      <a href="#">Log in</a>
+    </nav>
+  </header>
+  <section id="conteudo">
+    <div id="iphone">
+      <img src="./images/phones.png" alt="iphone">
+    </div>
+
+    <div id="descrição">
+      <h2> Capture and Share<br> the World's Moments</h2> <br> Instagram is a fast, beautiful and fun way to share your life with
+      friends and family.<br> <p>Take a picture or video, choose a filter to transform its look and feel, then post to
+      Instagram
+      &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p><br>
+      Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+      Jobs Privacy Terms &copy; 2014 Instagram
+    <img src="./images/badge-iphone.png"> 
+    <img src="./images/badge-android.png">
+    </div>
+  </section>
+</body>
+
 </html>
