--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    
+    <div class="wrapper">
+      <div class="topElements">
+        <img id="phones" src=".\images\phones.png" alt="phones">
+        <img id="brandLogo" src=".\images\brand.png" alt="brand logo">
+        <div id="logInButton">
+          <div><img id="homeIcon" src=".\images\home.png" alt="home icon"></div>
+          <div><a class="linkBtn" href="#">Log In</a></div>
+        </div>
+      </div>
+      <section>
+        <div id="descriptionBlock">
+          <h1>Capture and Share<br>the World's Moments</br></h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            - it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div>
+          <img id="badgeOne" src=".\images\badge-iphone.png" alt="bagde iphone">
+          <img id="badgeTwo" src=".\images\badge-android.png" alt="badge android">
+        </div>
+      </section>
+    </div>
+    <footer>
+      <div >
+        <ul class="bottomLinks">
+          <li><a href="">About Us</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Blog</a></li>
+          <li><a href="">Press</a></li>
+          <li><a href="">API</a></li>
+          <li><a href="">Jobs</a></li>
+          <li><a href="">Privacy</a></li>
+          <li><a href="">Terms</a></li>
+          <img src=".\images\copyright.png" alt="copyright logo">
+          <p id="brandBottom">2014 Instagram</p>
+        </ul>   
+      </div>  
+      
+    </footer>
   </body>
 </html>
