intagram clone done

--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+
+  <div class="container">
+    <div class="container-movel">
+      <img src="./images/phones.png" alt="App instagram on iphone">
+    </div>
+    <div class="container-Texto">
+      <div class="logo">
+        <img class="logoInstagram" src="./images/brand.png" alt="Logo Instagram">
+        <button>
+          <div><img src="./images/home.png" alt="icono home"></div>
+          <div>Log in</div>
+        </button>
+      </div>
+      <div class="textTotal">
+        <h2>Capture and Share
+          the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life
+          with friends and family.
+
+          Take a picture or video, choose a filter to transform its look
+          and feel, then post to Instagram &mdash; it's that easy. You can
+          even share to Facebook, Twitter, Tumblr and more. It's a
+          new way to see the world.
+
+          Oh yeah, did we mention it's free?</p>
+      </div>
+      <div class="appsDownload">
+
+        <img class="appleStore" src="./images/badge-iphone.png" alt="app Iphone">
+
+
+        <img src="./images/badge-android.png" alt="app Andorid">
+      </div>
+    </div>
+  </div>
+  </div>
+  <footer>
+
+    <a href="">ABOUT US</a>
+    <a href="">SUPPORT</a>
+    <a href="">BLOG</a>
+    <a href="">PRESS</a>
+    <a href="">API</a>
+    <a href="">JOBS</a>
+    <a href="">PRIVACY</a>
+    <a href="">TERMS</a>
+    <div>&copy; 2014 Instagram</div>
+
+  </footer>
+</body>
+
 </html>
