--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./styles/style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue_background"></div>
+
+
+    <main>
+      <section>
+        <img src="./images/phones.png" alt="Phone mockups">
+        <span>
+          <div class="login_bar">
+            <button><img src="./images/home.png" alt="Home">&nbspLog in</button>
+          </div>
+          <div class="information">
+              <h1>Capture and Share<br>the World's Moments</h1>
+              <p> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+                friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+              <span>
+                <a href=""><img src="./images/badge-iphone.png" alt="iPhone button"></a>
+                <a href=""><img src="./images/badge-android.png" alt="Android button"></a>
+              </span>
+          </div>
+        </span>
+      </section>
+      <footer>
+        <div>
+          <a href="">ABOUT US</a>
+          <a href="">SUPPORT</a>
+          <a href="">BLOG</a>
+          <a href="">PRESS</a>
+          <a href="">API</a>
+          <a href="">JOBS</a>
+          <a href="">PRIVACY</a>
+          <a href="">TERMS</a>
+          <p>&copy; 2014 Instagram</p>
+        </div>
+      </footer>
+    </main>
+
   </body>
-</html>
+  </html>
+  
+  <!--  Instagram is a fast, beautiful and fun way to share your life with
+  friends and family. 
+  Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
+  Jobs Privacy Terms &copy; 2014 Instagram -->
