--- a/index.html
+++ b/index.html
@@ -4,13 +4,59 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+<!-- Header -->
+    <header id ="header">
+      <section id = "iphoneImage" >
+        <!-- image IPhone -->
+      </section>
+      <section id = "information">
+        <div class ="logosTop">
+          <div class = "instagramLogo"><!-- Image Instagram --></div>
+          <div><!-- Image Login --></div>
+        </div>
+        <div class ="text">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.</p>
+          <article>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</article>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class ="logosBottom">
+          <div><!-- Image App Store --></div>
+          <div><!-- Image Googleplay --></div>
+        </div>  
+      </section>
+    </header>
+<!-- Footer -->
+    <footer id ="footer">
+      <div>
+        <ul>
+          <li><a href="">ABOUT US</a>
+          </li>
+          <li><a href="">SUPPORT</a>
+          </li>
+          <li><a href="">BLOG</a>
+          </li>
+          <li><a href="">PRESS</a>
+          </li>
+          <li><a href="">API</a>
+          </li>
+          <li><a href="">JOBS</a>
+          </li>
+          <li><a href="">PRIVACY</a>
+          </li>
+          <li><a href="">TERMS</a>
+          </li>
+        </ul>
+      </div>
+      <div class ="trademark">
+        <p>&copy; 2014 Instagram</p>
+      </div>
+    </footer>
   </body>
 </html>
