newest changes, still needs editing

--- a/index.html
+++ b/index.html
@@ -4,55 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <!--blue background, empty section-->
-    <section class = "rectangles">
-      <div id = "blue-rectangle">
-      </div>
-      <div id = "white-rectangle">
+    <section class="includes-all">
+      <div class="main-section">
+        <div class="all-ul">
+          <img src="./images/phones.png" alt="Two iPhones" class="iphones">
+          <div class="all-iphones">
+            <div class="logologin">
+              <img src="./images/brand.png" alt="Instagram" class="insta">
+              <div class="houselogin">
+                <img src="./images/home.png" alt="House">
+                <h5>Log in</h5>
+              </div>
+            </div>
+            <div>
+              <div class="h1p">
+                <h1>Capture and Share the World's Moments</h1>
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
+                Oh yeah, did we mention it's free?</p>
+              </div>
+              <div class="installapp">
+                <img src="./images/badge-android.png" alt="Go to Google play" id="google">
+                <img src="./images/badge-iphone.png" alt="Go to App Store" id="apple">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div>
+          <ul>
+            <li>
+              <a href="about us">ABOUT US</a>
+            </li>
+            <li>
+              <a href="support">SUPPORT</a>
+            </li>
+            <li>
+              <a href="blog">BLOG</a>
+            </li>
+            <li>
+              <a href="press">PRESS</a>
+            </li>
+            <li>
+              <a href="api">API</a>
+            </li>
+            <li>
+              <a href="jobs">JOBS</a>
+            </li>
+            <li>
+              <a href="privacy">PRIVACY</a>
+            </li>
+            <li>
+              <a href="terms">TERMS</a>
+            </li>
+            <li id="ee">
+              &copy; 2014 INSTAGRAM
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
-
-
-    <!--total main section-->
-    <section class = "main-section">
-      <div class = "nav-bar">
-        <figure>
-          <img src="./images/brand.png" alt="Instagram Logo">
-        </figure>
-        <div class = "button-image">
-          <img src="./images/home.png" alt="Home Button">
-        </div> 
-          <div class = "button">
-            <a href="logIn">Log in</a>
-          </div>
-      </div>
-      <main>
-        <H2>Capture and Share the World's Moments</H2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with
-          friends and family. <br> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. <br>
-          Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play</p>
-          <div class = "images">
-            <img src="./images/badge-iphone.png" alt="App Store">
-            <img src="./images/badge-android.png" alt="Google Play">
-          </div>
-      </main>
-    </section>
-    <footer class = "foot">
-      <ul>
-        <li><a href="about-us">ABOUT US</a></li>
-        <li><a href="support">SUPPORT</a></li>
-        <li><a href="blog">BLOG</a></li>
-        <li><a href="press">PRESS</a></li>
-        <li><a href="api">API</a></li>
-        <li><a href="jobs">JOBS</a></li>
-        <li><a href="privacy">PRIVACY</a></li>
-        <li><a href="terms">TERMS</a></li>
-        <li class = "copy">&copy; 2014 INSTAGRAM</li>
-      </ul>
-    </footer>
   </body>
 </html>
