Most recent updates

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <section class="includes-all">
+    <section class="total">
       <div class="main-section">
-        <div class="all-ul">
-          <img src="./images/phones.png" alt="Two iPhones" class="iphones">
-          <div class="all-iphones">
-            <div class="logologin">
+        <div class="surface-section">
+          <img src="./images/phones.png" alt="Two iPphones" class="iphones">
+          <div class="phones">
+            <div class="login-logo">
               <img src="./images/brand.png" alt="Instagram" class="insta">
               <div class="houselogin">
                 <img src="./images/home.png" alt="House">
@@ -20,48 +20,30 @@
               </div>
             </div>
             <div>
-              <div class="h1p">
-                <h1>Capture and Share the World's Moments</h1>
+              <div class="text">
+                <h2>Capture and Share the World's Moments</h2>
                 <p>Instagram is a fast, beautiful and fun way to share your life with friends and family. <br>
                 Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br>
                 Oh yeah, did we mention it's free?</p>
               </div>
-              <div class="installapp">
-                <img src="./images/badge-android.png" alt="Go to Google play" id="google">
-                <img src="./images/badge-iphone.png" alt="Go to App Store" id="apple">
+              <div class="app-stores">
+                <img src="./images/badge-iphone.png" alt="App store" id="google">
+                <img src="./images/badge-android.png" alt="Google Play" id="apple">
               </div>
             </div>
           </div>
         </div>
         <div>
           <ul>
-            <li>
-              <a href="about us">ABOUT US</a>
-            </li>
-            <li>
-              <a href="support">SUPPORT</a>
-            </li>
-            <li>
-              <a href="blog">BLOG</a>
-            </li>
-            <li>
-              <a href="press">PRESS</a>
-            </li>
-            <li>
-              <a href="api">API</a>
-            </li>
-            <li>
-              <a href="jobs">JOBS</a>
-            </li>
-            <li>
-              <a href="privacy">PRIVACY</a>
-            </li>
-            <li>
-              <a href="terms">TERMS</a>
-            </li>
-            <li id="ee">
-              &copy; 2014 INSTAGRAM
-            </li>
+            <li><a href="about us">ABOUT US</a></li>
+            <li><a href="support">SUPPORT</a></li>
+            <li><a href="blog">BLOG</a></li>
+            <li><a href="press">PRESS</a></li>
+            <li><a href="api">API</a></li>
+            <li><a href="jobs">JOBS</a></li>
+            <li><a href="privacy">PRIVACY</a></li>
+            <li><a href="terms">TERMS</a></li>
+            <li id="copy">&copy; 2014 INSTAGRAM</li>
           </ul>
         </div>
       </div>
