Fix some styles

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
       <div class="header">
         <img src="./images/brand.png" alt="">
         <button class="button-login">
-          <img src="./images/home.png" alt="">
+          <img src="./images/home.png" alt="Home Icon">
           <span>Log In</span>
         </button>
       </div>
       <div class="content">
         <div>
-          <h3>Capture and Share the World's Moments</h3>
+          <h2>Capture and Share the World's Moments</h2>
           <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
             friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to
@@ -36,11 +36,10 @@
       </div>
       <div class="right-footer">
         <div class="stores">
-          <div><img src="./images/badge-iphone.png" alt=""></div>
-          <div><img src="./images/badge-android.png" alt=""></div>
+          <div><img src="./images/badge-iphone.png" alt="App Store Icon"></div>
+          <div><img src="./images/badge-android.png" alt="Google Play Icon"></div>
         </div>
       </div>
-
     </div>
   </div>
   <div class="footer">
