Add some adjustment

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </div>
       <div class="content">
         <div>
-          <h2>Capture and Share the World's Moments</h2>
-          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
+          <h2>Capture and Share <br>the World's Moments</h2>
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>with
             friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to
             Instagram
