--- a/index.html
+++ b/index.html
@@ -5,12 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    <div class="bigger-box"><img src="./images/phones.png" alt="O.O">
+    
+    <div class="big-box">
+      
+    <header class="title"><img src="./images/brand.png">
+    <button class="log-in"><img src="./images/home.png">           Log in </button>
+    </header>
+    <div class="bg">
+    <div class="info">
+    <article><h2>Capture and Share<br>the World's Moments</h2> Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+    friends and family.
+    <br><br>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <br><br>Oh yeah, did we mention it's free?
+  </article>
+  <div class="buttons">
+    <div>
+      <butto n class="b1"><img src="./images/badge-iphone.png" ></button>
+    </div>
+    <div>
+      <butto nclass="b1"><img src="./images/badge-android.png"> </button>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>  
+    <footer>
+      <nav>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li id="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>    
+    </footer>
   </body>
 </html>
