--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div class=main>
+      <img id=phones src="images/phones.png">
+
+      <section id=focus>
+        <header class=logo>
+          <img src="images/brand.png"/> 
+      <button type="button"> <img src="images/home.png"/>  Log In</button>
+        </header>
+
+        <div class=box>
+
+          <h2>Capture and Share<br>the World's Moments</h2>
+          
+          <p>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life<br>with
+            friends and family.<br><br> Take a picture or video, choose a filter to transform its look<br>and feel, then post to Instagram
+            &mdash; it's that easy. You can<br>even share to Facebook, Twitter, Tumblr and more. It's a<br>new way to see the world.
+            <br>Oh yeah, did we mention it's free?</p>
+            </div>
+
+            <div class=badges>
+              <img src="images/badge-iphone.png">
+              <img src="images/badge-android.png"></div>
+              </section>
+              </div>
+
+
+      <footer>
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="">API</a>
+          <a href="">Jobs</a>
+          <a href="">Privacy</a>
+          <a href="">Terms</a>
+          <aside>&copy; 2014 Instagram</aside>
+      </footer>
+
 </html>
