add cards with attackvalues

--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
       </section>
       <section id = "information">
         <div class ="logosTop">
-          <div class = "instagramLogo"><!-- Image Instagram --></div>
-          <div><!-- Image Login --></div>
+          <div class = "instagramLogo"><img class ="instagramPic" src="images/brand.png" alt=""><!-- Image Instagram --></div>
+          <div class = "login">
+            <div class = "loginLogo"><img class ="logInPic" src="images/home.png" alt=""><!-- Image Login --></div>
+            <div class = "loginButton">
+              <button>Log in</button>
+            </div>
+          </div>
         </div>
         <div class ="text">
           <h1>Capture and Share the World's Moments</h1>
@@ -27,8 +32,8 @@
           <p>Oh yeah, did we mention it's free?</p>
         </div>
         <div class ="logosBottom">
-          <div><!-- Image App Store --></div>
-          <div><!-- Image Googleplay --></div>
+          <div class ="imageAppStore"> <img class ="appStorePic" src="images/badge-iphone.png" alt=""><!-- Image App Store --></div>
+          <div class ="imageGooglePlay"> <img class ="googleStorePic" src="images/badge-android.png" alt=""><!-- Image Googleplay --></div>
         </div>  
       </section>
     </header>
