--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <div class="content">
+      <section class="phones">     
+      <img src="images/phones.png" alt="phone"/>
+      </section> 
+      <section class="intro">
+      <img id="ins-logo" src="images/brand.png" alt="ins logo"/>
+        <div class="login-btn">
+        <span class="icon"></span>
+        <a href="#">Log in</a>
+        </div>
+        <section class="intro-text">
+      <h2>Capture and Share <br>the World's Moments</h2>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with
+          friends and family. </p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </section>
+      <img class="app-icon" src="images/badge-iphone.png" alt="apple app store icon"/>
+      <img class="app-icon" src="images/badge-android.png" alt="andorid app store icon"/>
+      </section>
+    </div>
+        <footer>
+        <a href="#">About Us</a> 
+        <a href="#">Support</a> 
+        <a href="#">Blog</a> 
+        <a href="#">Press</a> 
+        <a href="#">API</a> 
+        <a href="#">Jobs</a> 
+        <a href="#">Privacy</a> 
+        <a href="#">Terms</a>   
+       <p>&copy; 2014 INSTAGRAM</p>
+      </footer>
+    </body>
 </html>
