--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="full-page">
+      <main id="main-content">
+        <section id="smartphones-section">
+          <div class="phones-img">
+            <img src="./images/phones.png" alt="Image of two smartphones using Instagram">
+          </div>
+        </section>
+        <section id="main-section">
+          <div class="log-in">
+            <img src="./images/brand.png" class="logo" alt="Logo Instagram">
+            <button><img src="./images/home.png" alt=""> <span class="login-text">Log in</span> </button>
+          </div>
+          <div class="main-text">
+              <h1>Capture and Share the World's Moments</h1>
+              <p>Instagram Capture and Share the World's Moments Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong></strong> way to share your life with
+                friends and family.
+                <br><br>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <br><br> 
+                Oh yeah, did we mention it's free?</p>
+              <div class="badges">
+                <img src="./images/badge-iphone.png" alt="Download on App Store">
+                <img src="./images/badge-android.png" alt="Get it on Google play">
+              </div>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <div class="footer">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <p>2014 Instagram</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
