--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link href="http://fonts.cdnfonts.com/css/billabong" rel="stylesheet" />
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="background"></div>
+    <div class="content">
+      <img src="./images/phones.png" alt="mobiles picture" />
+      <div class="info-container">
+        <div class="brand">
+          <img src="./images/brand.png" alt="instagram brand" />
+          <button>
+            <img src="./images/home.png" alt="home login icone" />
+            <p>Log in</p>
+          </button>
+        </div>
+        <div class="frame">
+          <img
+            src="./images/frame.png"
+            alt="white transparent frame for text content"
+          />
+          <div class="text-container">
+            <h2>Capture and Share<br />the World's Moments</h2>
+            <p>
+              Instagran is a <strong>fast</strong>, <strong>beauty</strong> and
+              <strong>fun</strong> way to share your life with friends and
+              family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram - it's that easy. You can even share
+              to Facebook, Twitter, Tumblr and more. It's a new way to see the
+              world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            <div class="text-imgs">
+              <img
+                class="mac-store"
+                src="./images/badge-iphone.png"
+                alt="mac store icon"
+              />
+              <img
+                class="android-store"
+                src="./images/badge-android.png"
+                alt="android store icon"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
