--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="rightPart">
+        <img src="./images/phones.png" alt="iphone">
+      </div>
+      <div class="leftPart">
+        <div class="firstContent">
+          <img src="./images/brand.png" alt="brand">
+          <button class="buttonLogIn" type="button">
+            <img src="images/home.png" alt="home">
+            Log in</button>
+        </div>
+
+        <div class="secondContent">
+          <h1>Capture and Share the World's Moments</h1>
+          <h4>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h4>
+          <h4>Take a picture or video, choose a filter to transform its look and feel, then post to instagram - It's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </h4>
+          <h4>Oh yeah, did we mention it's free ?</h4>
+        </div>
+        <div class="thirdContent">
+          <img src="images/badge-iphone.png" alt="apple">
+          <img src="./images/badge-android.png" alt="android">
+        </div>
+      </div>
+    </main>
+    <div class="links">
+      <a href="#aboutus" target="blank">About us</a>
+      <a href="#support" target="blank">Support</a>
+      <a href="#blog" target="blank">Blog</a>
+      <a href="#press" target="blank">Press</a>
+      <a href="#api" target="blank">Api</a>
+      <a href="#jobs" target="blank">Jobs</a>
+      <a href="#privacy" target="blank">Privacy</a>
+      <a href="#terms" target="blank">Terms</a>
+      <p>@2014 INSTAGRAM</p>
+    </div>
   </body>
 </html>
