--- a/index.html
+++ b/index.html
@@ -4,13 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet"  href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <section class = "Section"> 
+      <div class ="mobile">
+        <img src="./images/phones.png" alt="App Screen"> 
+      </div>
+    </section>
+      <section class="Section01">
+
+        <div class= "togheter">
+        <div class = "logo-div">
+          <img class="logo" src="./images/brand.png" alt="logo and name">
+        </div>
+        <div>
+          <a href="www.instagram.com">
+           <button>
+           <img src="./images/home.png" alt="home buttom">
+            <span>Log in</span>
+            </button>
+          </a>
+        </div>
+      </div>
+
+      <div class = "textBlock">
+        <h2>Capture and Share the World's Moments</h2>
+        <article>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p> 
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+
+        <div class = "togheter2">
+        <button>
+          <a href="www.instagram.com">
+          <img src="./images/badge-iphone.png" alt="iphone">
+          </a>
+        </button>
+        <button>
+          <a href="www.instagram.com">
+          <img src="./images/badge-android.png" alt="android">
+          </a>
+        </button>
+      </div>
+      </div>
+    </section>
+    </header>
   </body>
+  <footer class="footer">
+    <section>
+       <a href="#">About Us</a>
+       <a href="#">Support</a> 
+       <a href="#">Blog</a> 
+       <a href="#">Press</a> 
+       <a href="#">API</a> 
+       <a href="#">Jobs</a> 
+       <a href="#">Privacy</a> 
+       <a href="#">Terms</a> 
+       <span>2014 Instagram</span> 
+    </section>
+
+  </footer>
 </html>
