--- a/index.html
+++ b/index.html
@@ -5,12 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main class="main-body">
+      <div>
+        <img src='./images/phones.png' alt="Phones image">
+      </div>
+
+      <div>
+        <div class="header-logo-container">
+          <div>
+            <img src='./images//brand.png' alt="logo instagran">
+          </div>
+          <div>
+            <a href="/login">
+              <button>
+                <img src="./images/home.png" alt="Mouse image">
+                <span>Log in</span>
+              </button>
+            </a>
+          </div>
+        </div>
+        <div>
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+            Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+          <div>
+            <a href='/downloads-apple'>
+              <img src="./images/badge-iphone.png" alt="Iphone-badge">
+            </a>
+            <a href='/downloads-andorid'>
+              <img src="./images/badge-android.png" alt="Android-badge">
+            </a>
+          </div>
+        </div>
+      </div>
+
+    </main>
+    <footer>
+      <a href="/About">About us</a>
+      <a href="/help">Support</a>
+      <a href="/blog">Blog</a>
+      <a href="/press">Press</a>
+      <a href="/api">API</a>
+      <a href="/careers">Job</a>
+      <a href="/privacy">Privacy</a>
+      <a href="/terms">Terms</a>
+      <span>&copy; 2014 Instagram</span>
+    </footer>
   </body>
 </html>
