--- a/index.html
+++ b/index.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Instagram Clone</title>
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="left_container">
+      <img src="/images/phones.png" alt="iphone picture">
+    </div>
+    <div class="right_container">
+      <nav class="title_container">
+        <div class="title">
+          <img src="/images/brand.png" alt="instagram logo">
+        </div>
+        <div class="login">
+          <button class="login_button"><img src="/images/home.png" alt="">Log in</button>
+
+        </div>
+      </nav>
+
+      <div class="text_container">
+        <div class="text">
+          <h2>Instagram Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+            world.
+            Oh yeah, did we mention it's free?
+          </p>
+        </div>
+        <div class="download_links">
+          <img src="/images/badge-iphone.png" alt="ios download link">
+          <img src="/images/badge-android.png" alt="android download link">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer class="footer_container">
+    <ul class="footer_links">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <div class="copyright">
+      <p>&copy; 2014 Instagram</p>
+    </div>
+  </footer>
+</body>
+
 </html>
