--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+        <link rel="stylesheet" href="./styles/style.css" />
+        <!-- don't forget to link your styles -->
+    </head>
+    <body>
+        <section class="page">
+            <div class="left-side">
+                <img src="./images/phones.png" alt="phones-image" />
+            </div>
+            <div class="right-side">
+                <div class="top">
+                    <img src="./images/brand.png" alt="instagram-logo" />
+                    <button class="login-btn">
+                        <img
+                            src="./images/home.png"
+                            alt="home-icon"
+                            class="home-icon"
+                        />
+                        Log in
+                    </button>
+                </div>
+                <div class="content-box">
+                    <h2 class="section-title">
+                        Capture and Share the World's Moments
+                    </h2>
+                    <p>
+                        Instagram is a fast, beautiful and fun way to share your
+                        life with friends and family.
+                    </p>
+                    <br />
+                    <p>
+                        Take a picture or video, choose a filter to transform
+                        its look and feel, then post to Instagram &mdash; it's
+                        that easy. You can even share to Facebook, Twitter,
+                        Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <br />
+                    <p>Oh yeah, did we mention it's free?</p>
+                    <br />
+                    <div class="section-links">
+                        <a href="#">
+                            <img
+                                src="./images/badge-iphone.png"
+                                alt="get-it-on-iphone-image"
+                        /></a>
+                        <a href="#">
+                            <img
+                                src="./images/badge-android.png"
+                                alt="get-it-on-android-image"
+                            />
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <a href="">About Us</a>
+            <a href="">Support</a>
+            <a href="">Blog Press</a>
+            <a href="">API</a>
+            <a href="">Jobs</a>
+            <a href="">Privacy</a>
+            <a href="">Terms</a>
+            <span class="copyright">&copy; 2014 Instagram</span>
+        </footer>
+    </body>
 </html>
