--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="/styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header></header>
+    <div class = "container">
+      <!--seccion imagen moviles-->
+      <section class = "phone">
+        <img src="/images/phones.png" alt="phones">
+      </section>
+
+
+
+      <!--seccion frame con texto-->
+      <section class = "frame">
+        <div class="head">
+          <img class = "insta" src="/images/brand.png" alt="brand">
+          <button class = "login">
+            <img class="brand" src="/images/home.png" alt="home">
+            <span>Log in</span>
+          </button>
+        </div>
+        <div class = "texto">
+          <h2>Capture and Share</br>the World's Moments </h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family.</br></br>  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</br></br> 
+            Oh yeah, did we mention it's free?</p>
+            <img class = "iphone" src="/images/badge-iphone.png" alt="appstore">
+            <img src="/images/badge-android.png" alt="playstore">
+        </div>
+      </section>
+    </div>
+    <!--footer-->
+    <footer>
+      <ul>
+        <li>about us</li>
+        <li>support</li>
+        <li>blog</li>
+        <li>press</li>
+        <li>api</li>
+        <li>jobs</li>
+        <li>privacy</li>
+        <li>terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
